@@ -1,3 +1,7 @@
+2005-06-20  Earnie Boyd  <earnie@users.sf.net>
+
+	* mingw.css: Modify to make IE and Firefox look nearly the same.
+
 2005-06-19  Earnie Boyd  <earnie@users.sf.net>
 
 	* mingw.css: Update CVS with site data.
